z-index of stars fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,6 +46,7 @@ body {
   right: -80vw;
   width: 100%;
   height: 120%;
+  z-index: -3;
 }
 
 .star {
